--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml" fx:controller="com.mycompany.pruebagit.FXMLController">
+<AnchorPane id="AnchorPane" fx:id="anchorpanel" prefHeight="328.0" prefWidth="417.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mycompany.pruebagit.FXMLController">
     <children>
-        <Button layoutX="126" layoutY="90" text="Click Me!" onAction="#handleButtonAction" fx:id="button" />
-        <Label layoutX="126" layoutY="120" minHeight="16" minWidth="69" fx:id="label" />
+        <Button fx:id="button" layoutX="26.0" layoutY="14.0" onAction="#handleButtonAction" text="Click Me!" />
+      <Canvas fx:id="canvas" height="263.0" layoutX="-1.0" layoutY="65.0" width="417.0" />
     </children>
 </AnchorPane>
